[package]
name = "tahwil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
human_format = "1.1.0"
indicatif = "0.17.8"
miette = { version = "7.2.0", features = ["fancy"] }
owo-colors = "4.0.0"
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
thiserror = "1.0.58"
ureq = "2.9.6"
